passbolt.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: passbolt-deployment
  labels:
    app: passbolt
spec:
  replicas: 1
  selector:
    matchLabels:
      app: passbolt
  template:
    metadata:
      labels:
        app: passbolt
    spec:
      containers:
      - name: passbolt
        image: passbolt/passbolt:latest
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: passbolt-service
spec:
  selector:
    app: passbolt
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
