play-with-docker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: play-with-docker-deployment
  labels:
    app: play-with-docker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: play-with-docker
  template:
    metadata:
      labels:
        app: play-with-docker
    spec:
      containers:
      - name: play-with-docker
        image: docker/getting-started
        ports:
        - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: play-with-docker-service
spec:
  selector:
    app: play-with-docker
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
